# MattyGBoy

./: .math_instructions.c.swp  CMakeLists.txt  README.md  \  cpu_emulator.c  cpu_emulator.h  helper_functions.c  helper_functions.h  makefile  math_instructions.c  math_instructions.h  mattyGboy.gitignore  mattygboy.c  register_structures.c  register_structures.h  test.c  unit_tests  unit_tests.c  unit_tests.txt
include/: .control_instructions.h.swp  bit_rotate_shift_instructions.h  control_instructions.h  cpu_control_instructions.h  cpu_emulator.h  global_declarations.h  graphics.h  helper_functions.h  load_instructions.h  logical_instructions.h  math_instructions.h  memory.h  register_structures.h  timers.h
src/: bit_rotate_shift_instructions.c  control_instructions.c  control_intsructions.c  cpu_control_instructions.c  cpu_emulator.c  graphics.c  helper_functions.c  load_instructions.c  logical_instructions.c  makefile  math_instructions.c  mattygboy  mattygboy.c  memory.c  register_structures.c  tests  timers.c  unit_tests  unit_tests.c
testFiles/: control_tests.txt
tests/: add_tests.txt  sub_tests.txt  tests  unit_tests  unit_tests.c
